--- a/proyecto_final/proyecto_final.csproj
+++ b/proyecto_final/proyecto_final.csproj
@@ -19,4 +19,7 @@
     <Folder Include="info\DutyFree\" />
     <Folder Include="info\Info\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
 </Project>
